Update Fix
- Square images not cover the container fully
- User avatar no longer goes outside of the container at smaller
breakpoints than xl in livestream cards.

--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -129,7 +129,10 @@ img.circle {
   justify-content: center;
 }
 .square__content img {
-  width: 110%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
 }
 
 /* positioning */
